@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.48 2008-01-03 01:06:44 martin Exp $
+# $Id: CHANGES,v 1.465.2.49 2008-01-03 23:26:45 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.2.5 (2008/??/??)
+ - (2008/01/03) Fixed bug# 2491 - OTRS crash's after initial login on fresh
+    installation on fedora 7, fedora 8, altlinux and ActiveState Perl on win32.
  - (2008/01/02) Fixed bug# 2601 - Only agents with rw permissions are shown in
     inform agent selections of note screens, all agents with note permissions
     should be shown.
